--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.product</groupId>
 	<artifactId>springMysqlHibernet</artifactId>
-	<packaging>pom</packaging>
+	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springMysqlHibernet</name>
 	<description>Demo project for Spring Boot</description>
