--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,12 @@
 			<artifactId>spring-data-commons</artifactId>
 			<version>2.5.4</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-war-plugin</artifactId>
+			<version>3.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
